# TrainerAi

./: .gitignore  CLAUDE.md  README.md
.github/agents/: Conductor.agent.md  Context.agent.md  DIfficulty-Calibrator-subagent.agent.md  Data-Logger-subagent.agent.md  EasyOCR-subagent.agent.md  Error-Detect-subagent.agent.md  Feedback.agent.md  Frame-diff-subagent.agent.md  Guidance.agent.md  Outcome-Tracker-subagent.agent.md  Perception.agent.md  Prompt-Builder-subagent.agent.md  Qwen-Interface-subagent.agent.md  RAG-Retrieval-subagent.agent.md  (+3 more)
plans/: postgresql-pgvector-backend-connection-phase-1-complete.md  postgresql-pgvector-backend-connection-plan.md  week2-motor-comenzi-context-complete.md  week2-motor-comenzi-context-phase-1-complete.md  week2-motor-comenzi-context-phase-2-complete.md  week2-motor-comenzi-context-phase-3-complete.md  week2-motor-comenzi-context-phase-4-complete.md  week2-motor-comenzi-context-phase-5-complete.md  week2-motor-comenzi-context-phase-6-complete.md  week2-motor-comenzi-context-plan.md
specs/: README.md  phase-A-docker-infrastructure.md  phase-B-real-embeddings.md  phase-C-qwen-llm-integration.md  phase-D-video-training-pipeline.md  phase-E-screen-capture.md  phase-F-full-pipeline-connection.md  phase-G-autocad-detection.md
trainerAI_backend/: .env.example  requirements.txt
trainerAI_overlay/: Cargo.toml  Dioxus.toml
trainerAI_overlay/src/: main.rs
trainerAI_overlay/src-tauri/: Cargo.toml  tauri.conf.json
trainerAI_overlay/src-tauri/src/: commands.rs  lib.rs  main.rs
trainerAI_overlay/src/renderer/: app.rs  mod.rs
(+29 files in other folders)
